--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
-Carolina Ramon Palacio <caramonp@gmail.com>
-Vannesa Garcia Vargas <vagava@gmail.com>
-Dania Puertas Mangones <puertasmangones@gmail.com>
+Carolina Ramon Palacio <2966@holbertonschool.com>
+Vannesa Garcia Vargas <2380@holbertonschool.com>
+Dania Puertas Mangones <2875@holbertonschool.com>
